
Translations:
 + Major update: Chinese
 + Credits page is now translatable
 * Remove Arabic translation from release

Frontend:
 + Add button in main menu at top left corner to open credits page
 + Restructure credits page
 + More intelligent automatic mission selection in campaign screen
 + New data directory for video thumbnails: Data/VideoThumbnails
 * Fix renaming a video leading to loss of thumbnail after restart
 * Fix controls list failing to display correct key names with regards to keyboard layout
 * Fix force-locked schemes getting unlocked when changing map types
 * Fix possible to select background-only or hidden themes indirectly by changing map type
 * Disallow slash, backslash and colon characters in team and scheme names

Sounds and voicepacks:
 + sndYoohoo has been split to sndYoohoo and sndKiss
 + Voice files sndPoisonCough and sndPoisonMoan are now optional (fall back to Default voicepack)
 + Tweak some taunts: sndFirstBlood, sndLeaveMeAlone, sndCutItOut

Lua API:
 + New call: SaveMissionVar(varname, value): Save value to mission variable (variable for non-campaign mission)
 + New call: GetMissionVar(varname): Get value of mission variable
 + New call: SetTurnTimePaused(isPaused): Call with true to pause turn time, false to unpause
 + New call: GetTurnTimePaused(): Returns true if turn time is paused due to Lua
 + New call: AddMissionTeam(color): Add mission team, i.e. the team selected by player in campaign/mission page
 + New call: AddMissionHog(health): Add a hedgehog for the mission team
 + New call: SetTeamPassive(teamname, isPassive): Mark a team as passive. Passive teams do not play and are treated like frozen teams.
 + New return value: AddTeam/AddMissionTeam return <real team name>, <team index>
 + SetClanColor: Now accepts negative color argument for user clan color, like in AddTeam
 + Utils library: New calls: getReadableChallengeRecord, updateChallengeRecord, integerSqrt, integerHypotenuse